--- a/AspNetWebDemo/AspNetWebDemo/Views/Home/Index.cshtml
+++ b/AspNetWebDemo/AspNetWebDemo/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Janin web-demo</h1>
+    <p>Tämä on oma web-demo-sovellukseni!</p>
 </div>
