Lisätty käyttöliittymätoimintoja sekä linkki yläpalkin navigaatioon.

--- a/AspNetWebDemo/AspNetWebDemo/Views/Home/UusiSivu.cshtml
+++ b/AspNetWebDemo/AspNetWebDemo/Views/Home/UusiSivu.cshtml
@@ -8,4 +8,8 @@
 <p>Jee, toimii!</p>
 
 
+<input class="form-control w-25" type="text" />
+<button class="btn btn-info mt-2">Hae asiakas</button>
+
+
 <img src="https://docs.microsoft.com/en-us/media/hubs/aspnet/core-overview-1.svg">
