--- a/AspNetWebDemo/AspNetWebDemo/Views/Shared/_Layout.cshtml
+++ b/AspNetWebDemo/AspNetWebDemo/Views/Shared/_Layout.cshtml
@@ -24,6 +24,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="/Home/UusiSivu">Uusi sivu</a>
+                        </li>
                     </ul>
                 </div>
             </div>
