Lisätty esimerkki ViewBag-olion käytöstä.

--- a/AspNetWebDemo/AspNetWebDemo/Views/Home/UusiSivu.cshtml
+++ b/AspNetWebDemo/AspNetWebDemo/Views/Home/UusiSivu.cshtml
@@ -8,11 +8,11 @@
 <p>Jee, toimii!</p>
 
 <input class="form-control w-25" type="text" />
-<button class="btn btn-info mt-2">Hae asiakas</button>
+<button class="btn btn-@ViewBag.NapinVäri mt-2">Hae asiakas</button>
 
 <p>&nbsp;</p>
 
-@if (false)
+@if (ViewBag.NäytäLista)
 {
     <ul>
         @{
