--- a/AspNetWebDemo/AspNetWebDemo/Views/Shared/_Layout.cshtml
+++ b/AspNetWebDemo/AspNetWebDemo/Views/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" href="/Home/UusiSivu">Uusi sivu</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="/Home/AsiakasListaus">Asiakaslistaus</a>
+                        </li>
                     </ul>
                 </div>
             </div>
