Aloitettu lisäämään varastoarvoa etusivulle (index).

--- a/AspNetWebDemo/AspNetWebDemo/Views/Home/Index.cshtml
+++ b/AspNetWebDemo/AspNetWebDemo/Views/Home/Index.cshtml
@@ -5,4 +5,8 @@
 <div class="text-center">
     <h1 class="display-4">Janin web-demo</h1>
     <p>Tämä on oma web-demo-sovellukseni!</p>
+
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <h2>Varastoarvo: @ViewBag.VarastoArvo.ToString("C")</h2>
 </div>
