--- a/AspNetWebDemo/AspNetWebDemo/Views/Home/Index.cshtml
+++ b/AspNetWebDemo/AspNetWebDemo/Views/Home/Index.cshtml
@@ -8,5 +8,5 @@
 
     <p>&nbsp;</p>
     <p>&nbsp;</p>
-    <h2>Varastoarvo: @ViewBag.VarastoArvo.ToString("C")</h2>
+    <h2 class="varastoarvo">Varastoarvo: @ViewBag.VarastoArvo.ToString("C")</h2>
 </div>
